--- a/css/anaCSS.css
+++ b/css/anaCSS.css
@@ -8,7 +8,7 @@ body {
  #page {
  max-width: 940px;
  min-width: 720px;
- margin: 10px 2px 10px auto;
+ margin: 10px auto 10px auto;
  padding: 20px;
  border: 2px solid #000;
    background-color: #ffffff;
